page invisible fixed state

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -2,9 +2,8 @@
 
 @mixin container(){
     background-color: $body-bg1;
-    height: 100vh;
-    overflow-y: scroll;
-    padding: 1.4rem;
+    min-height: 100vh;
+    padding: 2rem;
 }
 
 @mixin flexEvenlyCentered(){
